# OccuPy

./: .gitignore  .readthedocs.yaml  404.html  MANIFEST.in  README.md  index.html  levo.py  levo_utilities.py  mkdocs.yml  occupy.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: test_and_deploy.yml
Troubleshooting/chimX_trbl/: index.html
Troubleshooting/install_trbl/: index.html
Troubleshooting/other_trbl/: index.html
Tutorials/gui/: index.html
Tutorials/intro/: index.html
about/: index.html
docs/: about.md  index.md  install.md  other_page.md  troubleshooting.md  zcite.md
docs/Troubleshooting/: aa-occupy.md  chimX.md  chimX_trbl.md  install_trbl.md  other_trbl.md
docs/Tutorials/: gui.md  intro.md  simple.md
docs/examples/: README.md  plot_0_sin.py
docs/gallery/: highres.md  index.md  mass.md  membrane.md  modification.md  synthetic.md
docs/stylesheets/: extra.css
docs/subfolder/: moar.md
gallery/: index.html
gallery/highres/: index.html
gallery/mass/: index.html
gallery/membrane/: index.html
gallery/modification/: index.html
gallery/synthetic/: index.html
install/: index.html
levo/: __init__.py  __main__.py  map.py
levo/map/: __init__.py
levo/occupancy/: __init__.py  occupancy.py
levo/solvent/: __init__.py
levo/vis/: __init__.py  vis.py
occupy/: __init__.py  _version.py  args.py  estimate.py  extras.py  map.py  map_tools.py  occupancy.py  occupy.py  occupy_gui.py  percentile_maxima.py  solvent.py  vis.py
occupy_lib/: args.py  estimate.py  map_tools.py  occupancy.py  occupy.py  occupy_gui.py  percentile_maxima.py  solvent.py  vis.py
resources/: OccuPy.icns  help.txt
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_something.py
(+19 files in other folders)
